Added Audio Cues

--- a/index.html
+++ b/index.html
@@ -21,13 +21,22 @@
   <div class="title">
     <h1>N O N  -  C O P Y R I G H T - A T T A C H - F O U R </h1>
   </div>
-
-  <h3>It is Currently Player <span id="currentPlayer">1</span>'s Turn</h3>
+<div class="turnOrder">
+  <h3>It is <br> Currently<br> Player <span id="currentPlayer">1</span>'s <br>Turn</h3>
+</div>
 
 
 <div class="boardContainer">
     <div class="winScreen">
         <div class="winScreenText">
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
             <br>
             <h1 id = "winTitle">Congratulations!</h1>
             <br>
@@ -96,6 +105,9 @@
 </div>
 
   <body>
+
+    <!-- <audio id="select" src="sounds/synthetic-select.wav"></audio> -->
+
     <script src="App.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
