Added Media Queries

--- a/index.html
+++ b/index.html
@@ -15,14 +15,35 @@
       rel="stylesheet"
       integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
       crossorigin="anonymous"/>
-    <link rel="stylesheet" href="styleWide.css" />
+      <link
+      rel="stylesheet"
+      media="screen and (max-width: 1920px)"
+      href="styleWide.css"
+    />
+    <link
+      rel="stylesheet"
+      media="screen and (max-width: 1440px)"
+      href="styleMed.css"
+    />
+
+    <link
+    rel="stylesheet"
+    media="screen and (max-width: 1070px)"
+    href="styleSmall+.css"
+  />
+
+  <link
+  rel="stylesheet"
+  media="screen and (max-width: 600px)"
+  href="styleSmall.css"
+/>
     </head>
   
   <div class="title">
-    <h1>N O N  -  C O P Y R I G H T - A T T A C H - F O U R </h1>
+    N O N  -  C O P Y R I G H T - A T T A C H - F O U R
   </div>
 <div class="turnOrder">
-  <h3>It is <br> Currently<br> Player <span id="currentPlayer">1</span>'s <br>Turn</h3>
+  It is <br> Currently<br> Player <span id="currentPlayer">1</span>'s <br>Turn
 </div>
 
 
